fixed flex on cards and changed gaps

--- a/user.css
+++ b/user.css
@@ -77,8 +77,8 @@ body {
 
   main {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 10px;
   }
   
   .profile-card {
@@ -86,9 +86,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 300px;
+    width: 90%;
+    height: auto;
     margin: auto;
+    margin-bottom: 10px;
     padding: 20px;
     background-color: rgba(51, 51, 51, 0.75);
     border-radius: 10px;
@@ -116,9 +117,6 @@ body {
   }
   
   
-  
-  
-
   footer {
     background-color: rgba(139, 0, 0, .75);
     color: #fff;
